TestDepotApacheOptimizers